--- a/modules/configpuppet/templates/puppet.conf.client.erb
+++ b/modules/configpuppet/templates/puppet.conf.client.erb
@@ -4,19 +4,13 @@
 <% if @operatingsystem == "RedHat" -%>
         rundir = /var/run/puppet
 <% end -%>
-<% if @has_ruby_ldap -%><% if @has_ruby_ldap == "true" -%>
-        ldapuser = uid=anonymous
-<% if @ldapencrypt == "yes" -%>
-        ldapserver = <%= @firstserver %>
-        ldapport   = 1389
-<% else -%>
-        ldapserver = <%= scope.function_extlookup(['ldapservers'])[2] %>
-<% end -%>
-        ldapbase =  <%= scope.function_extlookup(['base_dn']).gsub(':', ',') %>
-<% end -%><% end -%>
 
 [agent]
         report = true
         server = <%= @puppetmaster %>
         ca_server = <%= @puppetcaserver %>
         environment = <%= @puppetenv %>
+<% if @forgeserver -%>
+        module_repository = http://<%= @forgeserver %>
+<% end -%>
+
